Fixing alignment issues with instructorCosts totals row

--- a/app/budget/directives/courseCosts/courseCosts.css
+++ b/app/budget/directives/courseCosts/courseCosts.css
@@ -98,3 +98,8 @@
 	padding-left: 20px;
 	text-align: center;
 }
+
+.course-costs__table-header--total-costs {
+	text-align: right;
+	padding-right: 25px;
+}
